cloud-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bng-home
  namespace: christopherjmiller
  labels:
    app: bng-home
    service: web
spec:
  replicas: 2
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: bng-home
  template:
    metadata:
      namespace: christopherjmiller
      labels:
        app: bng-home
        service: web
    spec:
      containers:
        - name: home
          image: quay.io/christopherjmiller/bng-home:1.3.0
          ports:
            - containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
          lifecycle:
            preStop:
              exec:
                command: ["/usr/sbin/nginx","-s","quit"]
---
apiVersion: v1
kind: Service
metadata:
  name: bng-home
  namespace: christopherjmiller
  labels:
    service: web
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: bng-home
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: bng-home
  namespace: christopherjmiller
  labels:
    service: web
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Content-Security-Policy: default-src 'none'; script-src 'self'; style-src 'self'; img-src 'self' data:; connect-src 'self'; font-src 'self'; base-uri 'none'; form-action 'self'; frame-ancestors 'none'; navigate-to https:; block-all-mixed-content";
spec:
  tls:
    - hosts:
        - brokenneckgang.com
        - www.brokenneckgang.com
      secretName: bng-home-tls
  rules:
    - host: brokenneckgang.com
      http:
        paths:
          - path: /
            backend:
              serviceName: bng-home
              servicePort: 80
    - host: www.brokenneckgang.com
      http:
        paths:
          - path: /
            backend:
              serviceName: bng-home
              servicePort: 80
